# openap

./: README.md  pyproject.toml
examples/: example_fuel_qar_data.ipynb
openap/: __init__.py  aero.py  base.py  contrail.py  drag.py  emission.py  fuel.py  gen.py  geo.py  kinematic.py  mass.py  phase.py  prop.py  thrust.py
openap/addon/: bada3.py  bada4.py
openap/backends/: __init__.py  casadi_backend.py  jax_backend.py  numpy_backend.py  protocol.py
openap/casadi/: __init__.py  aero_override.py
openap/data/aircraft/: a19n.yml  a20n.yml  a21n.yml  a306.yml  a318.yml  a319.yml  a320.yml  a321.yml  a332.yml  a333.yml  a339.yml  a343.yml  a359.yml  a35k.yml  a388.yml  b190.yml  b350.yml  b37m.yml  b38m.yml  b39m.yml  b3xm.yml  b712.yml  b733.yml  b734.yml  b737.yml  b738.yml  b739.yml  b744.yml  b748.yml  b752.yml  b753.yml  b762.yml  b763.yml  b764.yml  b772.yml  b773.yml  b77l.yml  b77w.yml  b788.yml  b789.yml  (+99 more)
openap/data/engine/: engines.csv
openap/data/fuel/: fuel_models.csv
openap/extra/: __init__.py  aero.py  filters.py  fuzzy.py  nav.py  setup.py  statistics.py
openap/jax/: __init__.py
openap/traj/: opt.py
scripts/: build_fuel_model.py  gen_airport_database.py  gen_engine_data_v27.py  inspect_engine_ff_emission.py
test/: test_bada.py
tests/: test_aero.py  test_backends.py  test_contrail.py  test_geo.py  test_ndarrayconvert.py
